refactor: 꿀조합 목록 조회 API 수정 (#44)
* refactor: 꿀조합 목록 조회 API에 LoginInfo 추가

* refactor: 상품이 사용된 꿀조합 목록 조회 API에 LoginInfo 추가

* refactor: ProductRecipeDto에 image, averageRating 추가

* refactor: 꿀조합 목록 조회 관련 dto 수정

* test: 로그인 여부에 대한 꿀조합 목록 조회 서비스 테스트 추가

* test: 로그인 여부에 따른 꿀조합 목록 조회 인수 테스트 추가