@@ -5,42 +5,44 @@ import com.funeat.recipe.domain.Recipe;
 import com.funeat.recipe.domain.RecipeImage;
 import java.time.LocalDateTime;
 import java.util.List;
-import java.util.stream.Collectors;
 
 public class RecipeDto {
 
     private final Long id;
     private final String image;
     private final String title;
+    private final String content;
     private final RecipeAuthorDto author;
     private final List<ProductRecipeDto> products;
-    private final Long favoriteCount;
+    private final Boolean favorite;
     private final LocalDateTime createdAt;
 
-    public RecipeDto(final Long id, final String image, final String title, final RecipeAuthorDto author,
-                     final List<ProductRecipeDto> products,
-                     final Long favoriteCount, final LocalDateTime createdAt) {
+    public RecipeDto(final Long id, final String image, final String title, final String content,
+                     final RecipeAuthorDto author, final List<ProductRecipeDto> products, final Boolean favorite,
+                     final LocalDateTime createdAt) {
         this.id = id;
         this.image = image;
         this.title = title;
+        this.content = content;
         this.author = author;
         this.products = products;
-        this.favoriteCount = favoriteCount;
+        this.favorite = favorite;
         this.createdAt = createdAt;
     }
 
     public static RecipeDto toDto(final Recipe recipe, final List<RecipeImage> recipeImages,
-                                  final List<Product> products) {
+                                  final List<Product> products, final Boolean favorite) {
         final RecipeAuthorDto authorDto = RecipeAuthorDto.toDto(recipe.getMember());
         final List<ProductRecipeDto> productDtos = products.stream()
                 .map(ProductRecipeDto::toDto)
-                .collect(Collectors.toList());
+                .toList();
+
         if (recipeImages.isEmpty()) {
-            return new RecipeDto(recipe.getId(), null, recipe.getTitle(), authorDto, productDtos,
-                    recipe.getFavoriteCount(), recipe.getCreatedAt());
+            return new RecipeDto(recipe.getId(), null, recipe.getTitle(), recipe.getContent(), authorDto,
+                    productDtos, favorite, recipe.getCreatedAt());
         }
-        return new RecipeDto(recipe.getId(), recipeImages.get(0).getImage(), recipe.getTitle(), authorDto, productDtos,
-                recipe.getFavoriteCount(), recipe.getCreatedAt());
+        return new RecipeDto(recipe.getId(), recipeImages.get(0).getImage(), recipe.getTitle(), recipe.getContent(),
+                authorDto, productDtos, favorite, recipe.getCreatedAt());
     }
 
     public Long getId() {
@@ -55,6 +57,10 @@ public class RecipeDto {
         return title;
     }
 
+    public String getContent() {
+        return content;
+    }
+
     public RecipeAuthorDto getAuthor() {
         return author;
     }
@@ -63,8 +69,8 @@ public class RecipeDto {
         return products;
     }
 
-    public Long getFavoriteCount() {
-        return favoriteCount;
+    public Boolean getFavorite() {
+        return favorite;
     }
 
     public LocalDateTime getCreatedAt() {
